--- a/src/components/PlanModal.css
+++ b/src/components/PlanModal.css
@@ -35,3 +35,22 @@
   border-radius: 10px;
   margin: 40px;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 20px;
+  margin-top: 20px;
+  color: white;
+}
+
+.pagination-previous,
+.pagination-next,
+.pagination-page {
+  margin: 0 5px;
+  padding: 5px 10px;
+  border-radius: 1000px;
+  cursor: pointer;
+  background-color: #3d3d3d;
+}
